--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.6.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
